# multi_agent_asset_compliance_system

./: .env.example  .gitignore  DESIGN.md  INGESTION_GUIDELINES.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py  rate_limiter.py
app/agents/: evidence_agent.py  graph.py  image_agent.py  rule_agent.py  state.py  verdict_agent.py
app/api/v1/: admin.py  audit.py  auth.py  chat.py  ingest.py  router.py
app/schemas/: admin.py  audit.py  chat.py  common.py  image.py  ingest.py
app/services/: document_loader.py  dynamodb_service.py  embedding_service.py  pinecone_service.py  s3_service.py  web_search_service.py
app/utils/: async_helpers.py  circuit_breaker.py  exceptions.py  formatting.py  llm.py  offline_clients.py  resilience.py  retry.py  sanitization.py  time.py
deploy/: README.md
deploy/docker-ec2/: Dockerfile  docker-compose.yml
frontend/: index.html
frontend/css/: chat.css  components.css  design-system.css  evidence-panel.css  layout.css  progress-tracker.css  verdict-card.css
frontend/js/: api-client.js  config.js  router.js  stream-reader.js  utils.js
frontend/js/components/: citation-card.js  modal.js  (+6 more)
frontend/pages/: admin.html  audit.html  chat.html  dashboard.html  ingest.html  login.html  settings.html
infra/: ec2_template.yaml
tests/: conftest.py
tests/integration/: helpers.py  test_admin_flow.py  test_audit_flow.py  test_chat_flow.py  test_ingest_flow.py
tests/scripts/: test_ddg.py  update_tests.py
tests/unit/: test_streaming.py
(+14 files in other folders)
